2007-07-01  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rcp.c (error): Output a newline.
	(totalread): New global.
	(LogThread): New.
	(RcpReceive): Change log message when stdin is closed.  Don't
	increment read counter when stdin returned 0 bytes.  Increment
	totalread.
	(RcpSvrSend): Add to totalread.
	(RcpSvrRecv): Add to totalread.  Don't wait for the extra NULL
	byte afterwards here.
	(rcp_main): If debugFlag is set, create the LogThread.

2007-06-30  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rcp.c (get_logfile): Delete.
	(logfile): New global.
	(vlog): New.
	(error): Use vlog.
	(debug): Use vlog.
	(MIN): New define.
	(RCP_ERR_DELAY): Remove.
	(RcpReceive): Don't output to stderr - use debug instead.
	(ParseTarget): Likewise.
	(RcpSvrSend): Remove Sleep calls.
	(RcpSvrRecv): Change type of blen to DWORD.  Remove Sleep calls.
	Don't output to stderr - use debug instead.  Limit the amount of
	bytes to receive to the size of the receiving file.  Wait for the
	extra NULL byte afterwards.
	(rcp_main): Add start and stop logging.

2007-06-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* FindFileA.c: Add a notice on file origin.  Convert C++ comments
	into C comments.

2007-06-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	Initial import.
	
	* LICENSE, README, TODO, ChangeLog, Makefile, rcp.c, FindFileA.c,
	Readme_org.txt: New files.


Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: